wild goose chase through hell to realize that a META-INF/services directory copy for the new doc runner was causeing all kinds of havoc on the test suite. 1/2 day lost --- and still need to solve making sure InstSets are loaded properly in the doc runner. Woe-is-me.